err/tipfy-dev.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tipfy'...
Compiling './lib/python3.5/site-packages/tipfy/app.py'...
***   File "./lib/python3.5/site-packages/tipfy/app.py", line 134
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tipfy/appengine'...
Listing './lib/python3.5/site-packages/tipfy/appengine/auth'...
Compiling './lib/python3.5/site-packages/tipfy/appengine/blobstore.py'...
***   File "./lib/python3.5/site-packages/tipfy/appengine/blobstore.py", line 234
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tipfy/appengine/db'...
Compiling './lib/python3.5/site-packages/tipfy/appengine/db/__init__.py'...
***   File "./lib/python3.5/site-packages/tipfy/appengine/db/__init__.py", line 412
    except db.Timeout, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/appengine/db/properties.py'...
***   File "./lib/python3.5/site-packages/tipfy/appengine/db/properties.py", line 21
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/appengine/sharded_counter.py'...
***   File "./lib/python3.5/site-packages/tipfy/appengine/sharded_counter.py", line 166
    except (db.Error, apiproxy_errors.Error), e:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/appengine/taskqueue.py'...
***   File "./lib/python3.5/site-packages/tipfy/appengine/taskqueue.py", line 47
    except PermanentTaskFailure, e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/appengine/xmpp.py'...
***   File "./lib/python3.5/site-packages/tipfy/appengine/xmpp.py", line 41
    except xmpp.InvalidMessageError, e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tipfy/auth'...
Compiling './lib/python3.5/site-packages/tipfy/auth/facebook.py'...
***   File "./lib/python3.5/site-packages/tipfy/auth/facebook.py", line 194
    except urlfetch.DownloadError, e:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/auth/friendfeed.py'...
***   File "./lib/python3.5/site-packages/tipfy/auth/friendfeed.py", line 157
    except urlfetch.DownloadError, e:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/auth/google.py'...
***   File "./lib/python3.5/site-packages/tipfy/auth/google.py", line 116
    except urlfetch.DownloadError, e:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/auth/oauth.py'...
***   File "./lib/python3.5/site-packages/tipfy/auth/oauth.py", line 64
    except urlfetch.DownloadError, e:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/auth/openid.py'...
***   File "./lib/python3.5/site-packages/tipfy/auth/openid.py", line 89
    except urlfetch.DownloadError, e:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/auth/twitter.py'...
***   File "./lib/python3.5/site-packages/tipfy/auth/twitter.py", line 110
    except urlfetch.DownloadError, e:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tipfy/debugger'...
Listing './lib/python3.5/site-packages/tipfy/debugger/templates'...
Compiling './lib/python3.5/site-packages/tipfy/routing.py'...
***   File "./lib/python3.5/site-packages/tipfy/routing.py", line 95
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tipfy/template.py'...
***   File "./lib/python3.5/site-packages/tipfy/template.py", line 126
    exec self.compiled in namespace
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/tipfy_dev-1.8.egg-info'...
Listing './lib/python3.5/site-packages/tipfyext'...
Listing './lib/python3.5/site-packages/tipfyext/jinja2'...
Compiling './lib/python3.5/site-packages/tipfyext/jinja2/scripts.py'...
***   File "./lib/python3.5/site-packages/tipfyext/jinja2/scripts.py", line 25
    except os.error, err:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tipfyext/wtforms'...
Compiling './lib/python3.5/site-packages/tipfyext/wtforms/form.py'...
***   File "./lib/python3.5/site-packages/tipfyext/wtforms/form.py", line 22
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
